[package]
name = "is-same"
version = "0.2.1"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"
description = "A trait for comparing object equality."
repository = "https://github.com/tiffany352/is-same"
keywords = ["object", "same", "referential", "equality"]
license = "MIT/Apache-2.0"
